src/objects/loan__Collection_Fee__c.object
<CustomObject>
    <fields>
        <fullName>loan__Collection_Fee_Amount__c</fullName>
        <description>Fee amount to be collected</description>
        <inlineHelpText>Fee amount to be collected</inlineHelpText>
        <label>Collection Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fee</label>
        <referenceTo>loan__Fee__c</referenceTo>
        <relationshipLabel>Collection Fees</relationshipLabel>
        <relationshipName>Collection_Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Id__c</fullName>
        <label>Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Payment_Collection_Record__c</fullName>
        <label>Loan Payment Collection Record</label>
        <referenceTo>loan__Loan_Payment_Collection__c</referenceTo>
        <relationshipLabel>Collection Fees</relationshipLabel>
        <relationshipName>Collection_Fees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Collection Fee</label>
    <nameField>
        <displayFormat>CFID-{0000000000}</displayFormat>
        <label>Collection Fee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>